@@ -1,0 +1,4 @@
+logfile = /tmp/logfile.txt
+tag = include8
+
+include conf.d/empty-logfile
